refactor: findAll 메소드에서 List.copyOf에서 Stream.toList()로 변경하여 간결한 스트림 처리 구현